--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,16 +2,14 @@
 
 <li>
     <article class="post">
-        <a href="{% url "post-detail-page" "the-mountains" %}">
-            <img src="{% static "blog/images/av.png" %}" alt="Nice photo">
+        <a href="{% url "post-detail-page" post.slug %}">
+            <img src="{% static "blog/images/"|add:post.image %}" alt="{{post.title}}">
             <div class="post__content">
                 <h3>
-                    About Me
+                    {{post.title}}
                 </h3>
                 <p>
-                    Doing master's thesis on active perception for robotics grasping utilizing
-                    3D deep learning, a part of the Joint Master's degree program in Intelligent
-                    Field Robotic Systems at the University de Girona, Spain, and the University of Zagreb, Croatia.
+                    {{post.excerpt}}
                 </p>
             </div>
         </a>
