--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Post Title
+    {{post.title}}
 {% endblock %}
 
 {% block css_files %}
@@ -12,25 +12,19 @@
 {% block content %}
 
 <section id="summary">
-    <h2>Post Title</h2>
+    <h2>{{post.title}}</h2>
         <article>
-            <img src="{% static "blog/images/av.png" %}" alt="">
-            <address>Nafees Bin Zaman</address>
+            <img src="{% static "blog/images/"|add:post.image %}" alt="{{post.title}}">
+            <address>{{post.author}}</address>
             <div>
-                Last Updated on <time> 28th October </time>
+                Last Updated on <time> {{post.date|date:"d M Y"}} </time>
             </div>
         </article>
 </section>
 
 <main>
     <p>
-        A statistical way of comparing two (or more) techniques—the A and the B.
-        Typically, the A is an existing technique, and the B is a new technique.
-        A/B testing not only determines which technique performs better but also
-        whether the difference is statistically significant. A/B testing usually
-        compares a single metric on two techniques; for example, how does model
-        accuracy compare for two techniques? However, A/B testing can also compare
-        any finite number of metrics.
+        {{post.content}}
     </p>
 </main>
 
